Fix OGMAuditLog action from string to integer